--- a/.temp/pages/curriculum/index.scss
+++ b/.temp/pages/curriculum/index.scss
@@ -1,7 +1,7 @@
 
     @import "../../assets/scss/variables";
     .#{$prefix} {
-        &-'curriculum' {
+        &-curriculum {
             width: 100%;
             min-height: 100Vh;
         }
