--- a/.temp/pages/index/index.scss
+++ b/.temp/pages/index/index.scss
@@ -1,46 +1,20 @@
 @import "../../assets/scss/variables";
 
-.#{$prefix} {
+@import "~taro-ui/dist/style/components/flex.scss";
 
-  &-index-wrap {
+
+.#{$prefix} {
+  &-wrap {
     width: 100%;
     min-height: 100vh;
-    .index {
-      &-topbar {
-        padding: 10rpx 50rpx;
-        text-align: center;
-        font-weight: bold;
-        color: #333;
-        font-size: 30rpx;
-      }
-  
-      // &-data {
-      // }
-       
-      &-title {
-        font-size: 28rpx;
-        color: #666;
-        width: 100%;
-        font-weight: bold;
-      }
-      &-list{
-        border-bottom: 1rpx solid #eee;
-        padding-bottom: 20rpx;
-        margin: 20rpx 24rpx;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center
-      }
-  
-      &-img {
-        width: 70%;
-        height: 200rpx;
-        background-repeat: no-repeat;
-        background-size: contain;
-        background-position: right center;
-      }
+    &-top {
+      padding: 10rpx 50rpx;
+      text-align: center;
+      font-weight: bold;
+      color: #333;
+      font-size: 30rpx;
     }
+
   }
  
 }
