--- a/.temp/app.scss
+++ b/.temp/app.scss
@@ -20,6 +20,10 @@
       -moz-osx-font-smoothing: grayscale;
     }
   
+
+  @import "~taro-ui/dist/style/components/button.scss";
+  @import "~taro-ui/dist/style/components/loading.scss";
+  @import "~taro-ui/dist/style/components/flex.scss";
   
     .flex-row-center{
       display: flex;
